--- a/materi_webgis.html
+++ b/materi_webgis.html
@@ -267,21 +267,21 @@
       <!-- Informasi -->
       <div class="box" id="btnInformasi">
         <div data-label="Informasi">
-          <img src="img/icon3.png" alt="Ikon Informasi" class="icon" />
+          <img src="icon3.png" alt="Ikon Informasi" class="icon" />
         </div>
       </div>
 
       <!-- Lihat Peta -->
       <div class="box" id="btnPeta">
         <div data-label="Lihat Peta">
-          <img src="img/icon2.png" alt="Ikon Peta" class="icon" />
+          <img src="icon2.png" alt="Ikon Peta" class="icon" />
         </div>
       </div>
 
       <!-- Daftar Anggota -->
       <div class="box" id="btnAnggota">
         <div data-label="Daftar Anggota">
-          <img src="img/icon1.png" alt="Ikon Anggota" class="icon" />
+          <img src="icon1.png" alt="Ikon Anggota" class="icon" />
         </div>
       </div>
     </div>
